A12: Fix overflow (#13)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,7 @@ button[mat-fab], button[extended] {
   }
 
 }
+
+.mat-drawer-inner-container {
+  overflow: hidden !important;
+}
